--- a/package.json
+++ b/package.json
@@ -9,48 +9,29 @@
     "dev": "rollup -c -w",
     "start": "sirv public",
     "test": "echo 'No tests specified'; exit 0;",
+    "validate": "svelte-check",
     "--- OLD SCRIPTS ----------": "",
     "old:build": "cross-env NODE_ENV=prod webpack --config config/index.js",
     "old:dev": "cross-env NODE_ENV=dev webpack-dev-server --config config/index.js --progress --colors --watch --display-modules "
   },
   "dependencies": {
-    "sirv-cli": "^0.4.5"
+    "sirv-cli": "^1.0.11"
   },
   "devDependencies": {
-    "@babel/core": "^7.7.2",
-    "@babel/plugin-proposal-object-rest-spread": "^7.6.2",
-    "@babel/plugin-transform-classes": "^7.7.0",
-    "@babel/plugin-transform-regenerator": "^7.7.0",
-    "@babel/plugin-transform-runtime": "^7.6.2",
-    "@babel/preset-env": "^7.7.1",
-    "@babel/runtime": "^7.7.2",
-    "@rollup/plugin-commonjs": "^11.1.0",
-    "@rollup/plugin-json": "^4.0.3",
-    "@rollup/plugin-node-resolve": "^7.1.3",
-    "babel-loader": "^8.0.6",
-    "cross-env": "^6.0.3",
-    "css-loader": "^3.2.0",
-    "d3": "^5.12.0",
-    "es6-templates": "^0.2.3",
-    "eslint": "^6.6.0",
-    "eslint-loader": "^3.0.2",
-    "extract-loader": "^3.1.0",
-    "file-loader": "^4.2.0",
-    "fs-extra": "^8.1.0",
-    "node-sass": "^4.13.0",
-    "ramda": "^0.26.1",
-    "rollup": "^2.9.1",
-    "rollup-plugin-livereload": "^1.3.0",
-    "rollup-plugin-svelte": "^5.2.1",
-    "rollup-plugin-terser": "^5.3.0",
-    "sass-loader": "^8.0.0",
-    "style-loader": "^1.0.0",
-    "stylelint": "^11.1.1",
-    "stylelint-webpack-plugin": "^1.0.3",
-    "svelte": "^3.22.2",
-    "template-literals-loader": "^1.1.2",
-    "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.9.0"
+    "@rollup/plugin-commonjs": "^19.0.0",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "^13.0.0",
+    "@rollup/plugin-typescript": "^8.2.1",
+    "@tsconfig/svelte": "^1.0.10",
+    "rollup": "^2.47.0",
+    "rollup-plugin-css-only": "^3.1.0",
+    "rollup-plugin-livereload": "^2.0.0",
+    "rollup-plugin-svelte": "^7.1.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "svelte": "^3.38.2",
+    "svelte-check": "^1.5.2",
+    "svelte-preprocess": "^4.7.3",
+    "tslib": "^2.2.0",
+    "typescript": "^4.2.4"
   }
 }
