--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "rollup -c",
     "dev": "rollup -c -w",
     "start": "sirv public",
+    "prettier": "prettier --write --plugin-search-dir=. ./**/*",
     "test": "echo 'No tests specified'; exit 0;",
     "validate": "svelte-check",
     "--- OLD SCRIPTS ----------": "",
@@ -23,6 +24,8 @@
     "@rollup/plugin-node-resolve": "^13.0.0",
     "@rollup/plugin-typescript": "^8.2.1",
     "@tsconfig/svelte": "^1.0.10",
+    "prettier": "^2.2.1",
+    "prettier-plugin-svelte": "^2.2.0",
     "rollup": "^2.47.0",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-livereload": "^2.0.0",
