--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "rollup -c",
     "dev": "rollup -c -w",
     "start": "sirv public",
-    "prettier": "prettier --write --plugin-search-dir=. ./**/*",
+    "prettier": "prettier --write --plugin-search-dir=. ./src/**/*",
     "test": "echo 'No tests specified'; exit 0;",
     "validate": "svelte-check",
     "--- OLD SCRIPTS ----------": "",
