--- a/package.json
+++ b/package.json
@@ -5,36 +5,38 @@
   "author": "neofonie GmbH",
   "license": "MIT",
   "scripts": {
+    "--- NPM SCRIPTS ----------": "",
+    "start": "sirv public",
+    "test": "echo 'No tests specified'; exit 0;",
+    "--- CUSTOM SCRIPTS ----------": "",
     "build": "rollup -c",
     "dev": "rollup -c -w",
-    "start": "sirv public",
     "prettier": "prettier --write --plugin-search-dir=. ./src/**/*",
-    "test": "echo 'No tests specified'; exit 0;",
     "validate": "svelte-check",
     "--- OLD SCRIPTS ----------": "",
     "old:build": "cross-env NODE_ENV=prod webpack --config config/index.js",
     "old:dev": "cross-env NODE_ENV=dev webpack-dev-server --config config/index.js --progress --colors --watch --display-modules "
   },
   "dependencies": {
-    "sirv-cli": "^1.0.11"
+    "sirv-cli": "^1.0.12"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^19.0.0",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.0.0",
     "@rollup/plugin-typescript": "^8.2.1",
-    "@tsconfig/svelte": "^1.0.10",
-    "prettier": "^2.2.1",
-    "prettier-plugin-svelte": "^2.2.0",
-    "rollup": "^2.47.0",
+    "@tsconfig/svelte": "^2.0.1",
+    "prettier": "^2.3.0",
+    "prettier-plugin-svelte": "^2.3.0",
+    "rollup": "^2.50.6",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-svelte": "^7.1.0",
     "rollup-plugin-terser": "^7.0.2",
     "svelte": "^3.38.2",
-    "svelte-check": "^1.5.2",
+    "svelte-check": "^2.1.0",
     "svelte-preprocess": "^4.7.3",
     "tslib": "^2.2.0",
-    "typescript": "^4.2.4"
+    "typescript": "^4.3.2"
   }
 }
