--- a/package.json
+++ b/package.json
@@ -24,8 +24,6 @@
     "@rollup/plugin-commonjs": "^19.0.0",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.0.0",
-    "@rollup/plugin-typescript": "^8.2.1",
-    "@tsconfig/svelte": "^2.0.1",
     "prettier": "^2.3.0",
     "prettier-plugin-svelte": "^2.3.0",
     "rollup": "^2.50.6",
@@ -35,8 +33,6 @@
     "rollup-plugin-terser": "^7.0.2",
     "svelte": "^3.38.2",
     "svelte-check": "^2.1.0",
-    "svelte-preprocess": "^4.7.3",
-    "tslib": "^2.2.0",
-    "typescript": "^4.3.2"
+    "svelte-preprocess": "^4.7.3"
   }
 }
