--- a/package.json
+++ b/package.json
@@ -24,13 +24,14 @@
     "@rollup/plugin-commonjs": "^19.0.0",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.0.0",
-    "prettier": "^2.3.0",
+    "prettier": "^2.3.1",
     "prettier-plugin-svelte": "^2.3.0",
     "rollup": "^2.50.6",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-svelte": "^7.1.0",
     "rollup-plugin-terser": "^7.0.2",
+    "sass": "^1.34.1",
     "svelte": "^3.38.2",
     "svelte-check": "^2.1.0",
     "svelte-preprocess": "^4.7.3"
